--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="header">
         <div class="container">
             <a href="#" class="logo" >
-                <!--<img src="Gambar/ikramprofil.png" alt="" class="img-fluid">-->
+                <img src="Gambar/logogwaja.png" alt="" class="img-fluid">
                 <h1>Afandhy</span></h1>
             </a>
             <ul class="menu">
